--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~bootstrap-css-only/css/bootstrap-reboot.min.css';
+@import '~bootstrap-css-only/css/bootstrap-grid.css';
+@import '~bootstrap-css-only/css/bootstrap.css';
